<resources>
    <string name="app_name">DrinksOderingChefEnd</string>
    <string name="our_cafe">Our Cafe</string>
    <string name="idel">IDEL</string>
    <string name="_0">0</string>
    <string name="_4_5">4.5</string>
    <string name="drinks">Drinks</string>
    <string name="_3">3</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="ask_details">Please enter your details</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your email </string>
    <string name="username">Username</string>
    <string name="username_hint">Enter your username </string>
    <string name="password">Password</string>
    <string name="remember_message">Remember for 30 days</string>
    <string name="forgot_password">Forgot Password </string>
    <string name="sign_in">Sign in </string>
    <string name="create_account_option">Don\'t have an account ? </string>
    <string name="sign_up">Sign Up </string>
    <string name="new_password">New Password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="my_cafe">My Cafe</string>
    <string name="drink_and_talk">Drink and Talk</string>
    <string name="menu">Menu</string>
    <string name="orders">Orders</string>
    <string name="order_completed">Order Completed</string>
    <string name="table_1">Table . 1</string>
    <string name="table_no">Table No : </string>
    <string name="in_progess">In Progess</string>
    <string name="_1">1</string>
</resources>