<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_marginHorizontal="30dp"
    android:layout_marginVertical="10dp"
    android:layout_width="150dp"
    android:layout_height="200dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="5dp"
        android:id="@+id/cafeTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/tableImage"
            android:layout_width="121dp"
            android:layout_height="107dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time"
            app:layout_constraintVertical_bias="0.22"
            app:srcCompat="@drawable/empty_table" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/idel"
            style="@style/heading6"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/noOfDrinksOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/_0"
            style="@style/heading6"
            app:layout_constraintBottom_toBottomOf="@+id/tableImage"
            app:layout_constraintEnd_toEndOf="@+id/tableImage"
            app:layout_constraintHorizontal_bias="0.252"
            app:layout_constraintStart_toStartOf="@+id/tableImage"
            app:layout_constraintTop_toBottomOf="@+id/time"
            app:layout_constraintVertical_bias="0.643" />

        <TextView
            android:id="@+id/tableNo"
            android:background="@color/design_default_color_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:paddingHorizontal="5dp"
            android:text="@string/_1"
            style="@style/heading6"
            app:layout_constraintBottom_toBottomOf="@+id/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/orderedStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_progess"
            style="@style/heading6"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tableImage"
            app:layout_constraintHorizontal_bias="0.412"
            app:layout_constraintStart_toStartOf="@+id/tableImage"
            app:layout_constraintTop_toBottomOf="@+id/tableImage" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>