<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/welcomeMessage"
        style="@style/heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.1"
        android:text="@string/welcome_back"
        app:layout_constraintBottom_toTopOf="@+id/welcomeMsgBaseLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcomeMsgLine"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/welcomeMsgLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/askDetails"
        style="@style/heading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_details"
        app:layout_constraintBottom_toTopOf="@+id/welcomeMsgBaseLine"
        app:layout_constraintEnd_toEndOf="@+id/welcomeMessage"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/welcomeMessage"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage"
        app:layout_constraintVertical_bias="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/welcomeMsgBaseLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <TextView
        android:id="@+id/email"
        style="@style/heading6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:padding="15dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcomeMsgBaseLine"
        app:layout_constraintVertical_bias="0.014" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="44dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="11sp"
        android:textStyle="normal"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            style="@style/heading6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/customized_edit_text_background"
            android:hint="@string/email_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password"
        style="@style/heading6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:padding="15dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/welcomeMsgBaseLine"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="44dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="11sp"
        android:textStyle="normal"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.0"
        app:passwordToggleEnabled="true">

        <EditText
            style="@style/heading6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/customized_edit_text_background"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signIn"
        style="@style/heading3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/customized_edit_text_background"
        android:backgroundTint="@color/yellow"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />


</androidx.constraintlayout.widget.ConstraintLayout>
